// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stateless select should render component in search mode and false for multiple choice: Component has correct render in search mode and mutiple choice equal false 1`] = `
<Select
  autoFocus={false}
  error={false}
  filterable={false}
  maxDropdownHeight="900px"
  multiple={false}
  onBlur={[MockFunction]}
  onChange={[MockFunction]}
  onFocus={[MockFunction]}
  onMouseDown={[Function]}
  onMouseEnter={[MockFunction]}
  onMouseLeave={[MockFunction]}
  onMouseUp={[Function]}
  onTextInputChange={[MockFunction]}
  options={Array []}
  overrides={Object {}}
  selectedOptions={Array []}
  tabIndex={0}
  textValue=""
  type="search"
>
  <MockStyledComponent>
    <div
      styled-component="true"
    >
      <Input
        autoFocus={false}
        disabled={false}
        endEnhancer={null}
        error={false}
        name=""
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        overrides={
          Object {
            "After": [Function],
            "Before": [Function],
            "Input": Object {
              "component": [Function],
              "props": Object {
                "aria-autocomplete": "list",
                "aria-expanded": false,
                "onKeyDown": [Function],
                "role": "combobox",
                "tabIndex": 0,
              },
            },
            "InputContainer": Object {
              "component": [Function],
              "props": Object {},
            },
          }
        }
        required={false}
        size="default"
        startEnhancer={null}
        value=""
      >
        <MockStyledComponent
          $disabled={false}
          $error={false}
          $isFocused={false}
          $required={false}
          $size="default"
        >
          <div
            styled-component="true"
          >
            <BaseInput
              adjoined="none"
              autoFocus={false}
              disabled={false}
              error={false}
              inputRef={
                Object {
                  "current": null,
                }
              }
              name=""
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              overrides={
                Object {
                  "After": [Function],
                  "Before": [Function],
                  "Input": Object {
                    "component": [Function],
                    "props": Object {
                      "aria-autocomplete": "list",
                      "aria-expanded": false,
                      "onKeyDown": [Function],
                      "role": "combobox",
                      "tabIndex": 0,
                    },
                  },
                  "InputContainer": Object {
                    "component": [Function],
                    "props": Object {},
                  },
                }
              }
              placeholder=""
              required={false}
              size="default"
              type="text"
              value=""
            >
              <MockStyledComponent
                $adjoined="none"
                $disabled={false}
                $error={false}
                $isFocused={false}
                $required={false}
                $size="default"
              >
                <div
                  styled-component="true"
                >
                  <Before
                    $adjoined="none"
                    $disabled={false}
                    $error={false}
                    $isFocused={false}
                    $required={false}
                    $size="default"
                  >
                    <MockStyledComponent
                      role="list"
                    >
                      <div
                        role="list"
                        styled-component="true"
                      >
                        <MockStyledComponent
                          $type="loop"
                          src="data:image/svg+xml;utf8,<svg width=\\"15\\" height=\\"15\\" viewBox=\\"0 0 15 15\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path d=\\"M9 9L13 13M10 5C10 7.76142 7.76142 10 5 10C2.23858 10 0 7.76142 0 5C0 2.23858 2.23858 0 5 0C7.76142 0 10 2.23858 10 5Z\\" transform=\\"translate(1 1)\\" stroke=\\"#1B6DE0\\" stroke-width=\\"2\\" stroke-linecap=\\"round\\"/></svg>"
                        >
                          <img
                            src="data:image/svg+xml;utf8,<svg width=\\"15\\" height=\\"15\\" viewBox=\\"0 0 15 15\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path d=\\"M9 9L13 13M10 5C10 7.76142 7.76142 10 5 10C2.23858 10 0 7.76142 0 5C0 2.23858 2.23858 0 5 0C7.76142 0 10 2.23858 10 5Z\\" transform=\\"translate(1 1)\\" stroke=\\"#1B6DE0\\" stroke-width=\\"2\\" stroke-linecap=\\"round\\"/></svg>"
                            styled-component="true"
                          />
                        </MockStyledComponent>
                      </div>
                    </MockStyledComponent>
                  </Before>
                  <MockStyledComponent
                    $adjoined="none"
                    $disabled={false}
                    $error={false}
                    $isFocused={false}
                    $ref={
                      Object {
                        "current": null,
                      }
                    }
                    $required={false}
                    $size="default"
                    aria-autocomplete="list"
                    aria-expanded={false}
                    aria-invalid={false}
                    aria-required={false}
                    disabled={false}
                    name=""
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onKeyUp={[Function]}
                    placeholder=""
                    role="combobox"
                    tabIndex={0}
                    type="text"
                    value=""
                  >
                    <input
                      aria-autocomplete="list"
                      aria-expanded={false}
                      aria-invalid={false}
                      aria-required={false}
                      disabled={false}
                      name=""
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onKeyUp={[Function]}
                      placeholder=""
                      role="combobox"
                      styled-component="true"
                      tabIndex={0}
                      type="text"
                      value=""
                    />
                  </MockStyledComponent>
                  <After
                    $adjoined="none"
                    $disabled={false}
                    $error={false}
                    $isFocused={false}
                    $required={false}
                    $size="default"
                  >
                    <MockStyledComponent
                      $type="clear_all"
                      onClick={[Function]}
                      src="data:image/svg+xml;utf8,<svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 16 16\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M8 16C12.4183 16 16 12.4183 16 8C16 3.58173 12.4183 0 8 0C3.58173 0 0 3.58173 0 8C0 12.4183 3.58173 16 8 16ZM6.03033 4.96967C5.73743 4.67679 5.26257 4.67679 4.96967 4.96967C4.67676 5.26257 4.67676 5.73743 4.96967 6.03033L6.93933 8L4.96967 9.96967C4.67676 10.2626 4.67676 10.7374 4.96967 11.0303C5.26257 11.3232 5.73743 11.3232 6.03033 11.0303L8 9.06067L9.96967 11.0303C10.2626 11.3232 10.7374 11.3232 11.0303 11.0303C11.3232 10.7374 11.3232 10.2626 11.0303 9.96967L9.06067 8L11.0303 6.03033C11.3232 5.73743 11.3232 5.26257 11.0303 4.96967C10.7374 4.67679 10.2626 4.67679 9.96967 4.96967L8 6.93933L6.03033 4.96967Z\\" fill=\\"#999999\\"/></svg>"
                    >
                      <img
                        onClick={[Function]}
                        src="data:image/svg+xml;utf8,<svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 16 16\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M8 16C12.4183 16 16 12.4183 16 8C16 3.58173 12.4183 0 8 0C3.58173 0 0 3.58173 0 8C0 12.4183 3.58173 16 8 16ZM6.03033 4.96967C5.73743 4.67679 5.26257 4.67679 4.96967 4.96967C4.67676 5.26257 4.67676 5.73743 4.96967 6.03033L6.93933 8L4.96967 9.96967C4.67676 10.2626 4.67676 10.7374 4.96967 11.0303C5.26257 11.3232 5.73743 11.3232 6.03033 11.0303L8 9.06067L9.96967 11.0303C10.2626 11.3232 10.7374 11.3232 11.0303 11.0303C11.3232 10.7374 11.3232 10.2626 11.0303 9.96967L9.06067 8L11.0303 6.03033C11.3232 5.73743 11.3232 5.26257 11.0303 4.96967C10.7374 4.67679 10.2626 4.67679 9.96967 4.96967L8 6.93933L6.03033 4.96967Z\\" fill=\\"#999999\\"/></svg>"
                        styled-component="true"
                      />
                    </MockStyledComponent>
                  </After>
                </div>
              </MockStyledComponent>
            </BaseInput>
          </div>
        </MockStyledComponent>
      </Input>
      <SelectDropDown
        getOptionLabel={[Function]}
        isDropDownOpen={false}
        maxDropdownHeight="90vh"
        multiple={true}
        onChange={[Function]}
        onItemSelect={[Function]}
        options={Array []}
        optionsLoaded={false}
        overrides={Object {}}
        selectedOptions={Array []}
        type="search"
      >
        <div />
      </SelectDropDown>
    </div>
  </MockStyledComponent>
</Select>
`;

exports[`Stateless select should render component in search mode and true for multiple choice: Component has correct render in search mode and mutiple choice equal true 1`] = `
<Select
  autoFocus={false}
  error={false}
  filterable={false}
  maxDropdownHeight="900px"
  multiple={true}
  onBlur={[MockFunction]}
  onChange={[MockFunction]}
  onFocus={[MockFunction]}
  onMouseDown={[Function]}
  onMouseEnter={[MockFunction]}
  onMouseLeave={[MockFunction]}
  onMouseUp={[Function]}
  onTextInputChange={[MockFunction]}
  options={Array []}
  overrides={Object {}}
  selectedOptions={Array []}
  tabIndex={0}
  textValue=""
  type="search"
>
  <MockStyledComponent>
    <div
      styled-component="true"
    >
      <Input
        autoFocus={false}
        disabled={false}
        endEnhancer={null}
        error={false}
        name=""
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        overrides={
          Object {
            "After": [Function],
            "Before": [Function],
            "Input": Object {
              "component": [Function],
              "props": Object {
                "aria-autocomplete": "list",
                "aria-expanded": false,
                "onKeyDown": [Function],
                "role": "combobox",
                "tabIndex": 0,
              },
            },
            "InputContainer": Object {
              "component": [Function],
              "props": Object {},
            },
          }
        }
        required={false}
        size="default"
        startEnhancer={null}
        value=""
      >
        <MockStyledComponent
          $disabled={false}
          $error={false}
          $isFocused={false}
          $required={false}
          $size="default"
        >
          <div
            styled-component="true"
          >
            <BaseInput
              adjoined="none"
              autoFocus={false}
              disabled={false}
              error={false}
              inputRef={
                Object {
                  "current": null,
                }
              }
              name=""
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              overrides={
                Object {
                  "After": [Function],
                  "Before": [Function],
                  "Input": Object {
                    "component": [Function],
                    "props": Object {
                      "aria-autocomplete": "list",
                      "aria-expanded": false,
                      "onKeyDown": [Function],
                      "role": "combobox",
                      "tabIndex": 0,
                    },
                  },
                  "InputContainer": Object {
                    "component": [Function],
                    "props": Object {},
                  },
                }
              }
              placeholder=""
              required={false}
              size="default"
              type="text"
              value=""
            >
              <MockStyledComponent
                $adjoined="none"
                $disabled={false}
                $error={false}
                $isFocused={false}
                $required={false}
                $size="default"
              >
                <div
                  styled-component="true"
                >
                  <Before
                    $adjoined="none"
                    $disabled={false}
                    $error={false}
                    $isFocused={false}
                    $required={false}
                    $size="default"
                  >
                    <MockStyledComponent
                      role="list"
                    >
                      <div
                        role="list"
                        styled-component="true"
                      >
                        <MockStyledComponent
                          $type="loop"
                          src="data:image/svg+xml;utf8,<svg width=\\"15\\" height=\\"15\\" viewBox=\\"0 0 15 15\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path d=\\"M9 9L13 13M10 5C10 7.76142 7.76142 10 5 10C2.23858 10 0 7.76142 0 5C0 2.23858 2.23858 0 5 0C7.76142 0 10 2.23858 10 5Z\\" transform=\\"translate(1 1)\\" stroke=\\"#1B6DE0\\" stroke-width=\\"2\\" stroke-linecap=\\"round\\"/></svg>"
                        >
                          <img
                            src="data:image/svg+xml;utf8,<svg width=\\"15\\" height=\\"15\\" viewBox=\\"0 0 15 15\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path d=\\"M9 9L13 13M10 5C10 7.76142 7.76142 10 5 10C2.23858 10 0 7.76142 0 5C0 2.23858 2.23858 0 5 0C7.76142 0 10 2.23858 10 5Z\\" transform=\\"translate(1 1)\\" stroke=\\"#1B6DE0\\" stroke-width=\\"2\\" stroke-linecap=\\"round\\"/></svg>"
                            styled-component="true"
                          />
                        </MockStyledComponent>
                      </div>
                    </MockStyledComponent>
                  </Before>
                  <MockStyledComponent
                    $adjoined="none"
                    $disabled={false}
                    $error={false}
                    $isFocused={false}
                    $ref={
                      Object {
                        "current": null,
                      }
                    }
                    $required={false}
                    $size="default"
                    aria-autocomplete="list"
                    aria-expanded={false}
                    aria-invalid={false}
                    aria-required={false}
                    disabled={false}
                    name=""
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onKeyUp={[Function]}
                    placeholder=""
                    role="combobox"
                    tabIndex={0}
                    type="text"
                    value=""
                  >
                    <input
                      aria-autocomplete="list"
                      aria-expanded={false}
                      aria-invalid={false}
                      aria-required={false}
                      disabled={false}
                      name=""
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onKeyUp={[Function]}
                      placeholder=""
                      role="combobox"
                      styled-component="true"
                      tabIndex={0}
                      type="text"
                      value=""
                    />
                  </MockStyledComponent>
                  <After
                    $adjoined="none"
                    $disabled={false}
                    $error={false}
                    $isFocused={false}
                    $required={false}
                    $size="default"
                  >
                    <MockStyledComponent
                      $type="clear_all"
                      onClick={[Function]}
                      src="data:image/svg+xml;utf8,<svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 16 16\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M8 16C12.4183 16 16 12.4183 16 8C16 3.58173 12.4183 0 8 0C3.58173 0 0 3.58173 0 8C0 12.4183 3.58173 16 8 16ZM6.03033 4.96967C5.73743 4.67679 5.26257 4.67679 4.96967 4.96967C4.67676 5.26257 4.67676 5.73743 4.96967 6.03033L6.93933 8L4.96967 9.96967C4.67676 10.2626 4.67676 10.7374 4.96967 11.0303C5.26257 11.3232 5.73743 11.3232 6.03033 11.0303L8 9.06067L9.96967 11.0303C10.2626 11.3232 10.7374 11.3232 11.0303 11.0303C11.3232 10.7374 11.3232 10.2626 11.0303 9.96967L9.06067 8L11.0303 6.03033C11.3232 5.73743 11.3232 5.26257 11.0303 4.96967C10.7374 4.67679 10.2626 4.67679 9.96967 4.96967L8 6.93933L6.03033 4.96967Z\\" fill=\\"#999999\\"/></svg>"
                    >
                      <img
                        onClick={[Function]}
                        src="data:image/svg+xml;utf8,<svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 16 16\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M8 16C12.4183 16 16 12.4183 16 8C16 3.58173 12.4183 0 8 0C3.58173 0 0 3.58173 0 8C0 12.4183 3.58173 16 8 16ZM6.03033 4.96967C5.73743 4.67679 5.26257 4.67679 4.96967 4.96967C4.67676 5.26257 4.67676 5.73743 4.96967 6.03033L6.93933 8L4.96967 9.96967C4.67676 10.2626 4.67676 10.7374 4.96967 11.0303C5.26257 11.3232 5.73743 11.3232 6.03033 11.0303L8 9.06067L9.96967 11.0303C10.2626 11.3232 10.7374 11.3232 11.0303 11.0303C11.3232 10.7374 11.3232 10.2626 11.0303 9.96967L9.06067 8L11.0303 6.03033C11.3232 5.73743 11.3232 5.26257 11.0303 4.96967C10.7374 4.67679 10.2626 4.67679 9.96967 4.96967L8 6.93933L6.03033 4.96967Z\\" fill=\\"#999999\\"/></svg>"
                        styled-component="true"
                      />
                    </MockStyledComponent>
                  </After>
                </div>
              </MockStyledComponent>
            </BaseInput>
          </div>
        </MockStyledComponent>
      </Input>
      <SelectDropDown
        getOptionLabel={[Function]}
        isDropDownOpen={false}
        maxDropdownHeight="90vh"
        multiple={true}
        onChange={[Function]}
        onItemSelect={[Function]}
        options={Array []}
        optionsLoaded={false}
        overrides={Object {}}
        selectedOptions={Array []}
        type="search"
      >
        <div />
      </SelectDropDown>
    </div>
  </MockStyledComponent>
</Select>
`;

exports[`Stateless select should render component in select mode and false for multiple choice: Component has correct render in select mode and mutiple choice equal false 1`] = `
<Select
  autoFocus={false}
  error={false}
  filterable={false}
  maxDropdownHeight="900px"
  multiple={false}
  onBlur={[MockFunction]}
  onChange={[MockFunction]}
  onFocus={[MockFunction]}
  onMouseDown={[Function]}
  onMouseEnter={[MockFunction]}
  onMouseLeave={[MockFunction]}
  onMouseUp={[Function]}
  onTextInputChange={[MockFunction]}
  options={Array []}
  overrides={Object {}}
  selectedOptions={Array []}
  tabIndex={0}
  textValue=""
  type="select"
>
  <MockStyledComponent>
    <div
      styled-component="true"
    >
      <div
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <Input
          autoFocus={false}
          disabled={true}
          endEnhancer={null}
          error={false}
          name=""
          onBlur={[Function]}
          onFocus={[Function]}
          overrides={
            Object {
              "After": [Function],
              "Before": [Function],
              "Input": Object {
                "component": [Function],
                "props": Object {
                  "aria-autocomplete": "none",
                  "aria-expanded": false,
                  "role": "combobox",
                },
              },
              "InputContainer": Object {
                "component": [Function],
                "props": Object {},
              },
              "Root": Object {
                "component": [Function],
                "props": Object {},
              },
            }
          }
          required={false}
          size="default"
          startEnhancer={null}
        >
          <MockStyledComponent
            $disabled={true}
            $error={false}
            $isFocused={false}
            $required={false}
            $size="default"
          >
            <div
              styled-component="true"
            >
              <BaseInput
                adjoined="none"
                autoFocus={false}
                disabled={true}
                error={false}
                inputRef={
                  Object {
                    "current": null,
                  }
                }
                name=""
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                overrides={
                  Object {
                    "After": [Function],
                    "Before": [Function],
                    "Input": Object {
                      "component": [Function],
                      "props": Object {
                        "aria-autocomplete": "none",
                        "aria-expanded": false,
                        "role": "combobox",
                      },
                    },
                    "InputContainer": Object {
                      "component": [Function],
                      "props": Object {},
                    },
                    "Root": Object {
                      "component": [Function],
                      "props": Object {},
                    },
                  }
                }
                placeholder=""
                required={false}
                size="default"
                type="text"
              >
                <MockStyledComponent
                  $adjoined="none"
                  $disabled={true}
                  $error={false}
                  $isFocused={false}
                  $required={false}
                  $size="default"
                >
                  <div
                    styled-component="true"
                  >
                    <Before
                      $adjoined="none"
                      $disabled={true}
                      $error={false}
                      $isFocused={false}
                      $required={false}
                      $size="default"
                    >
                      <MockStyledComponent
                        role="list"
                      >
                        <div
                          role="list"
                          styled-component="true"
                        />
                      </MockStyledComponent>
                    </Before>
                    <MockStyledComponent
                      $adjoined="none"
                      $disabled={true}
                      $error={false}
                      $isFocused={false}
                      $ref={
                        Object {
                          "current": null,
                        }
                      }
                      $required={false}
                      $size="default"
                      aria-autocomplete="none"
                      aria-expanded={false}
                      aria-invalid={false}
                      aria-required={false}
                      disabled={true}
                      name=""
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onKeyUp={[Function]}
                      placeholder=""
                      role="combobox"
                      type="text"
                    >
                      <input
                        aria-autocomplete="none"
                        aria-expanded={false}
                        aria-invalid={false}
                        aria-required={false}
                        disabled={true}
                        name=""
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyPress={[Function]}
                        onKeyUp={[Function]}
                        placeholder=""
                        role="combobox"
                        styled-component="true"
                        type="text"
                      />
                    </MockStyledComponent>
                    <After
                      $adjoined="none"
                      $disabled={true}
                      $error={false}
                      $isFocused={false}
                      $required={false}
                      $size="default"
                    >
                      <MockStyledComponent
                        $type="select"
                        src="data:image/svg+xml;utf8,<svg width=\\"12\\" height=\\"6\\" viewBox=\\"0 0 12 6\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path d=\\"M5.29289 5.29289L0.853553 0.853553C0.538571 0.538571 0.761654 0 1.20711 0H10.7929C11.2383 0 11.4614 0.538571 11.1464 0.853554L6.70711 5.29289C6.31658 5.68342 5.68342 5.68342 5.29289 5.29289Z\\" transform=\\"translate(12) scale(-1 1)\\" fill=\\"#666666\\"/></svg>"
                      >
                        <img
                          src="data:image/svg+xml;utf8,<svg width=\\"12\\" height=\\"6\\" viewBox=\\"0 0 12 6\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path d=\\"M5.29289 5.29289L0.853553 0.853553C0.538571 0.538571 0.761654 0 1.20711 0H10.7929C11.2383 0 11.4614 0.538571 11.1464 0.853554L6.70711 5.29289C6.31658 5.68342 5.68342 5.68342 5.29289 5.29289Z\\" transform=\\"translate(12) scale(-1 1)\\" fill=\\"#666666\\"/></svg>"
                          styled-component="true"
                        />
                      </MockStyledComponent>
                    </After>
                  </div>
                </MockStyledComponent>
              </BaseInput>
            </div>
          </MockStyledComponent>
        </Input>
      </div>
      <SelectDropDown
        getOptionLabel={[Function]}
        isDropDownOpen={false}
        maxDropdownHeight="90vh"
        multiple={false}
        onChange={[Function]}
        onItemSelect={[Function]}
        options={Array []}
        optionsLoaded={false}
        overrides={Object {}}
        selectedOptions={Array []}
        type="select"
      >
        <div />
      </SelectDropDown>
    </div>
  </MockStyledComponent>
</Select>
`;

exports[`Stateless select should render component in select mode and true for multiple choice: Component has correct render in select mode and mutiple choice equal true 1`] = `
<Select
  autoFocus={false}
  error={false}
  filterable={false}
  maxDropdownHeight="900px"
  multiple={true}
  onBlur={[MockFunction]}
  onChange={[MockFunction]}
  onFocus={[MockFunction]}
  onMouseDown={[Function]}
  onMouseEnter={[MockFunction]}
  onMouseLeave={[MockFunction]}
  onMouseUp={[Function]}
  onTextInputChange={[MockFunction]}
  options={Array []}
  overrides={Object {}}
  selectedOptions={Array []}
  tabIndex={0}
  textValue=""
  type="select"
>
  <MockStyledComponent>
    <div
      styled-component="true"
    >
      <div
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <Input
          autoFocus={false}
          disabled={true}
          endEnhancer={null}
          error={false}
          name=""
          onBlur={[Function]}
          onFocus={[Function]}
          overrides={
            Object {
              "After": [Function],
              "Before": [Function],
              "Input": Object {
                "component": [Function],
                "props": Object {
                  "aria-autocomplete": "none",
                  "aria-expanded": false,
                  "role": "combobox",
                },
              },
              "InputContainer": Object {
                "component": [Function],
                "props": Object {},
              },
              "Root": Object {
                "component": [Function],
                "props": Object {},
              },
            }
          }
          required={false}
          size="default"
          startEnhancer={null}
        >
          <MockStyledComponent
            $disabled={true}
            $error={false}
            $isFocused={false}
            $required={false}
            $size="default"
          >
            <div
              styled-component="true"
            >
              <BaseInput
                adjoined="none"
                autoFocus={false}
                disabled={true}
                error={false}
                inputRef={
                  Object {
                    "current": null,
                  }
                }
                name=""
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                overrides={
                  Object {
                    "After": [Function],
                    "Before": [Function],
                    "Input": Object {
                      "component": [Function],
                      "props": Object {
                        "aria-autocomplete": "none",
                        "aria-expanded": false,
                        "role": "combobox",
                      },
                    },
                    "InputContainer": Object {
                      "component": [Function],
                      "props": Object {},
                    },
                    "Root": Object {
                      "component": [Function],
                      "props": Object {},
                    },
                  }
                }
                placeholder=""
                required={false}
                size="default"
                type="text"
              >
                <MockStyledComponent
                  $adjoined="none"
                  $disabled={true}
                  $error={false}
                  $isFocused={false}
                  $required={false}
                  $size="default"
                >
                  <div
                    styled-component="true"
                  >
                    <Before
                      $adjoined="none"
                      $disabled={true}
                      $error={false}
                      $isFocused={false}
                      $required={false}
                      $size="default"
                    >
                      <MockStyledComponent
                        role="list"
                      >
                        <div
                          role="list"
                          styled-component="true"
                        />
                      </MockStyledComponent>
                    </Before>
                    <MockStyledComponent
                      $adjoined="none"
                      $disabled={true}
                      $error={false}
                      $isFocused={false}
                      $ref={
                        Object {
                          "current": null,
                        }
                      }
                      $required={false}
                      $size="default"
                      aria-autocomplete="none"
                      aria-expanded={false}
                      aria-invalid={false}
                      aria-required={false}
                      disabled={true}
                      name=""
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onKeyUp={[Function]}
                      placeholder=""
                      role="combobox"
                      type="text"
                    >
                      <input
                        aria-autocomplete="none"
                        aria-expanded={false}
                        aria-invalid={false}
                        aria-required={false}
                        disabled={true}
                        name=""
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyPress={[Function]}
                        onKeyUp={[Function]}
                        placeholder=""
                        role="combobox"
                        styled-component="true"
                        type="text"
                      />
                    </MockStyledComponent>
                    <After
                      $adjoined="none"
                      $disabled={true}
                      $error={false}
                      $isFocused={false}
                      $required={false}
                      $size="default"
                    >
                      <MockStyledComponent
                        $type="select"
                        src="data:image/svg+xml;utf8,<svg width=\\"12\\" height=\\"6\\" viewBox=\\"0 0 12 6\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path d=\\"M5.29289 5.29289L0.853553 0.853553C0.538571 0.538571 0.761654 0 1.20711 0H10.7929C11.2383 0 11.4614 0.538571 11.1464 0.853554L6.70711 5.29289C6.31658 5.68342 5.68342 5.68342 5.29289 5.29289Z\\" transform=\\"translate(12) scale(-1 1)\\" fill=\\"#666666\\"/></svg>"
                      >
                        <img
                          src="data:image/svg+xml;utf8,<svg width=\\"12\\" height=\\"6\\" viewBox=\\"0 0 12 6\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path d=\\"M5.29289 5.29289L0.853553 0.853553C0.538571 0.538571 0.761654 0 1.20711 0H10.7929C11.2383 0 11.4614 0.538571 11.1464 0.853554L6.70711 5.29289C6.31658 5.68342 5.68342 5.68342 5.29289 5.29289Z\\" transform=\\"translate(12) scale(-1 1)\\" fill=\\"#666666\\"/></svg>"
                          styled-component="true"
                        />
                      </MockStyledComponent>
                    </After>
                  </div>
                </MockStyledComponent>
              </BaseInput>
            </div>
          </MockStyledComponent>
        </Input>
      </div>
      <SelectDropDown
        getOptionLabel={[Function]}
        isDropDownOpen={false}
        maxDropdownHeight="90vh"
        multiple={true}
        onChange={[Function]}
        onItemSelect={[Function]}
        options={Array []}
        optionsLoaded={false}
        overrides={Object {}}
        selectedOptions={Array []}
        type="select"
      >
        <div />
      </SelectDropDown>
    </div>
  </MockStyledComponent>
</Select>
`;
